k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /user($|/)(.*)
            backend:
              serviceName: user
              servicePort: 8080
          - path: /billing($|/)(.*)
            backend:
              serviceName: billing
              servicePort: 8080
          - path: /order($|/)(.*)
            backend:
              serviceName: order
              servicePort: 8080
          - path: /notification($|/)(.*)
            backend:
              serviceName: notification
              servicePort: 8080
